<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
   <artifactId>restcomm-sbc</artifactId>
    <groupId>org.restcomm</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>
 
	<artifactId>sbc-testsuite</artifactId>
    
	<name>RestComm SBC :: Test :: ${project.artifactId}</name>
	
	<dependencies>
		<!-- Testing -->
		
	<!-- 
		<dependency>
			<groupId>com.telestax.servlet</groupId>
			<artifactId>restcomm.commons</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
-->
		<!-- <dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.application</artifactId> 
			<version>${project.version}</version> <type>war</type> <scope>test</scope> 
			</dependency> <dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.commons</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.dao</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.mgcp</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.sms</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.http</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency>
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.telephony</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.telephony.api</artifactId> 
			<version>${project.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>com.telestax.servlet</groupId> <artifactId>restcomm.interpreter</artifactId> 
			<version>${project.version}</version> <scope>test</scope> </dependency> -->

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala-lang.version}</version>
		</dependency>

		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-actor_2.10</artifactId>
			
		</dependency>
		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-slf4j_2.10</artifactId>
			
		</dependency>


		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-core</artifactId>
		
		</dependency>

		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-web</artifactId>
		
		</dependency>
		
		<dependency>
  			<groupId>org.infinispan</groupId>
  			<artifactId>infinispan-core</artifactId>
  		
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${jersey.version}</version>
		</dependency>


		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-ri</artifactId>
			<scope>test</scope>
		</dependency>

		<!--Dependencies for Tomcat-7 -->
		<dependency>
			<groupId>org.mobicents.servlet.sip.containers</groupId>
			<artifactId>sip-servlets-catalina-7</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mobicents.servlet.sip.containers</groupId>
			<artifactId>sip-servlets-tomcat-7</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mobicents.arquillian.container</groupId>
			<artifactId>mss-tomcat-embedded-7</artifactId>
			<version>${mss.arquillian.version}</version>
			<scope>test</scope>
		</dependency>

		<!--Dependencies for Tomcat-7 -->

		<!--Dependencies for Tomcat-6 -->
		<!-- <dependency> <groupId>org.mobicents.servlet.sip.containers</groupId> 
			<artifactId>sip-servlets-catalina-6</artifactId> <version>${sipservletapi.version}</version> 
			<scope>test</scope> </dependency> <dependency> <groupId>org.mobicents.servlet.sip.containers</groupId> 
			<artifactId>sip-servlets-tomcat-jboss4</artifactId> <version>${sipservletapi.version}</version> 
			<scope>test</scope> </dependency> <dependency> <groupId>org.mobicents.arquillian.container</groupId> 
			<artifactId>mss-tomcat-embedded-6</artifactId> <version>${mss.arquillian.version}</version> 
			<scope>test</scope> </dependency> -->

		<!--Dependencies for Tomcat-6 -->

		
		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-core-api</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-spec</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-impl</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-client</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>
		
		 	<dependency>
				<groupId>org.jboss.arquillian.junit</groupId>
				<artifactId>arquillian-junit-container</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
    		<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
				<version>${shrinkwrap.resolver.version}</version>
				<scope>test</scope>
			</dependency>

		<dependency>
			<groupId>org.mobicents.ha.javax.sip</groupId>
			<artifactId>mobicents-jain-sip-ha-core</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-api</artifactId>
			<version>1.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mobicents.servlet.sip</groupId>
			<artifactId>sip-servlets-application-router</artifactId>
			<version>${sipservletapi.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-coyote</artifactId>
			<version>${tomcat7.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jasper</artifactId>
			<version>${tomcat7.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>1.57</version>
			<!-- Include this if you have dependency conflicts for Guava, Jetty, Jackson 
				or Apache HTTP Client -->
			<classifier>standalone</classifier>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>${tomcat7.version}</version>
		</dependency>

		
		<dependency>
			<groupId>org.mobicents.arquillian.container</groupId>
			<artifactId>mss-arquillian-mediaserver-api</artifactId>
			<version>${mss.arquillian.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mobicents.arquillian.container/mss-tomcat-embedded-7 -->
		<dependency>
		    <groupId>org.mobicents.arquillian.container</groupId>
		    <artifactId>mss-tomcat-embedded-7</artifactId>
		    <version>1.0.1</version>
		</dependency>
		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mobicents.arquillian.container</groupId>
			<artifactId>mss-arquillian-mediaserver-extension</artifactId>
			<version>${mss.arquillian.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mobicents.sipunit/sipunit -->
		<dependency>
		    <groupId>org.mobicents.sipunit</groupId>
		    <artifactId>sipunit</artifactId>
		    <version>2.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.icegreen</groupId>
			<artifactId>greenmail</artifactId>
			<version>1.4.0</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.restcomm</groupId>
			<artifactId>sbc-application</artifactId>
			<version>${project.version}</version>
			<classifier>classes</classifier>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArguments>
						<g />
					</compilerArguments>
					<source>1.7</source>
					<target>1.7</target>
					
			       
      
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>false</useProjectReferences>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19.1</version>
					<configuration>
						<argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
						<!-- <excludes> <exclude>**/SmsSessionTest.java</exclude> </excludes> -->
					
						<forkCount>1</forkCount>
						<reuseForks>false</reuseForks>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>mobicents-public-repository-group</id>
			<name>Mobicens Public Maven Repository Group</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>mobicents-public-repository-group</id>
			<name>Mobicens Public Maven Repository Group</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
